<resources>
    <string name="app_name">Biblioteca Escolar</string>
    <string name="senha_login">Senha</string>
    <string name="entrar_login">Entrar</string>
    <string name="usuario_login">Usuário</string>
    <string name="txt_titulo_biologia">Aqui estão os livros sobre biologia:</string>
    <string name="txt_titulo_comedia">Aqui estão os livros sobre comédia:</string>
    <string name="txt_titulo_contos">Aqui estão os livros sobre contos:</string>
    <string name="txt_titulo_cronicas">Aqui estão os livros sobre crônicas:</string>
    <string name="txt_titulo_fantasia">Aqui estão os livros sobre fantasia:</string>
    <string name="txt_titulo_fisica">Aqui estão os livros sobre física:</string>
    <string name="txt_titulo_geografia">Aqui estão os livros sobre geografia:</string>
    <string name="txt_titulo_hq">Aqui estão as HQ\'s:</string>
    <string name="txt_titulo_historia">Aqui estão os livros sobre história:</string>
    <string name="txt_titulo_humanas">Aqui estão os livros sobre Ciências Humanas:</string>
    <string name="txt_titulo_matematica">Aqui estão os livros sobre matemática:</string>
    <string name="txt_titulo_outros_d">Aqui estão outros livros:</string>
    <string name="txt_titulo_outros_nd">Aqui estão os outros livros:</string>
    <string name="txt_titulo_poesia">Aqui estão os livros sobre poesia:</string>
    <string name="txt_titulo_portugues">Aqui estão os livros sobre português:</string>
    <string name="txt_titulo_quimica">Aqui estão os livros sobre química:</string>
    <string name="txt_titulo_romance">Aqui estão os livros sobre romance:</string>
    <string name="txt_titulo_sci_fi">Aqui estão os livros sobre Ficção científica:</string>
    <string name="txt_titulo_didatico">Sobre qual assunto deseja ler?</string>
    <string name="txt_fisica">Fisica</string>
    <string name="txt_portugues">Português</string>
    <string name="txt_geografia">Geografia</string>
    <string name="txt_humanas">Humanas</string>
    <string name="txt_quimica">Química</string>
    <string name="txt_biologia">Biologia</string>
    <string name="txt_historia">História</string>
    <string name="txt_matematica">Matemática</string>
    <string name="txt_outros_didatico">Outros</string>
    <string name="txt_titulo_nao_didatico">Sobre qual assunto deseja ler?</string>
    <string name="txt_fantasia">Fantasia</string>
    <string name="txt_hq">HQ</string>
    <string name="txt_romance">Romance</string>
    <string name="txt_comedia">Comédia</string>
    <string name="txt_contos">Contos</string>
    <string name="txt_poesias">Poesias</string>
    <string name="txt_cronicas">Crônicas</string>
    <string name="txt_sci_fi">Sci-fi</string>
    <string name="txt_outros_nd">Outros</string>
    <string name="txt_titulo_inicial">Que tipo de livro você está procurando?</string>
    <string name="txt_diditico">Didático</string>
    <string name="txt_nao_diditico">Não Didático</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>