<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InicialActivity">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/txt_menssagem_inicial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/txt_titulo_inicial"
        android:textSize="40sp" />

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_weight="9"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txt_didatico_inicial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txt_diditico"
                android:textSize="30sp" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/btn_didatico_inicial"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_gravity="center"
                android:src="@drawable/icon_portugues" />

        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txt_naodidatico_inicial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txt_nao_diditico"
                android:textSize="30sp" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/btn_naodidatico_inicial"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_gravity="center"
                android:src="@drawable/icon_fantasia" />

        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v7.widget.LinearLayoutCompat>


</LinearLayout>