<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DidaticoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:text="@string/txt_titulo_didatico"
                android:textSize="40dp" />

            <android.support.v7.widget.LinearLayoutCompat
                android:id="@+id/ly_linha1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="60dp">

                <android.support.v7.widget.LinearLayoutCompat
                    android:id="@+id/Col_1_L1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_marginBottom="40dp">

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/btn_fisica_didatico"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/icon_fisica"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"/>

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/txt_fisica_didatico"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25sp"
                        android:text="@string/txt_fisica"
                        android:layout_gravity="center"/>

                </android.support.v7.widget.LinearLayoutCompat>

                <android.support.v7.widget.LinearLayoutCompat
                    android:id="@+id/Col_2_L1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/btn_portugues_didatico"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/icon_portugues"
                        android:layout_gravity="center"
                        android:layout_marginLeft="17dp"/>

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/txt_portugues_didatico"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25sp"
                        android:text="@string/txt_portugues"
                        android:layout_gravity="center"
                        android:layout_marginLeft="17dp"/>

                </android.support.v7.widget.LinearLayoutCompat>

                <android.support.v7.widget.LinearLayoutCompat
                    android:id="@+id/Col_3_L1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/btn_geografia_didatico"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/icon_geografia"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"/>

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/txt_geografia_didatico"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25sp"
                        android:text="@string/txt_geografia"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"/>

                </android.support.v7.widget.LinearLayoutCompat>

            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.LinearLayoutCompat
                android:id="@+id/ly_linha2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp">

                <android.support.v7.widget.LinearLayoutCompat
                    android:id="@+id/Col_1_L2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/btn_humanas_didatico"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/icon_humanas"
                        android:layout_gravity="center"
                        android:layout_marginRight="19dp"/>

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/txt_humanas_didatico"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25sp"
                        android:text="@string/txt_humanas"
                        android:layout_gravity="center"
                        android:layout_marginRight="15dp"/>


                </android.support.v7.widget.LinearLayoutCompat>

                <android.support.v7.widget.LinearLayoutCompat
                    android:id="@+id/Col_2_L2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/btn_quimica_didatico"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/icon_quimica"
                        android:layout_gravity="center"
                        android:layout_marginRight="16dp"/>

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/txt_quimica_didatico"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25sp"
                        android:text="@string/txt_quimica"
                        android:layout_gravity="center"
                        android:layout_marginRight="10dp"/>

                </android.support.v7.widget.LinearLayoutCompat>

                <android.support.v7.widget.LinearLayoutCompat
                    android:id="@+id/Col_3_L2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/btn_biologia_didatico"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/icon_biologia"
                        android:layout_gravity="center"/>

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/txt_biologia_didatico"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25sp"
                        android:text="@string/txt_biologia"
                        android:layout_gravity="center"/>

                </android.support.v7.widget.LinearLayoutCompat>

            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.LinearLayoutCompat
                android:id="@+id/ly_linha3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.v7.widget.LinearLayoutCompat
                    android:id="@+id/Col_1_L3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/btn_historia_didatico"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/icon_historia"
                        android:layout_gravity="center"/>

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/txt_historia_didatico"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25sp"
                        android:text="@string/txt_historia"
                        android:layout_gravity="center"
                        />

                </android.support.v7.widget.LinearLayoutCompat>

                <android.support.v7.widget.LinearLayoutCompat
                    android:id="@+id/Col_2_L3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/btn_mat_didatico"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/icon_matematica"
                        android:layout_gravity="center"/>

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/txt_mat_didatico"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25sp"
                        android:text="@string/txt_matematica"
                        android:layout_gravity="center"/>

                </android.support.v7.widget.LinearLayoutCompat>

                <android.support.v7.widget.LinearLayoutCompat
                    android:id="@+id/Col_3_L3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/btn_outros_didatico"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/icon_outros"
                        android:layout_gravity="center"
                        android:layout_marginRight="2dp"/>

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/txt_outros_didatico"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25sp"
                        android:text="@string/txt_outros_didatico"
                        android:layout_gravity="center"/>

                </android.support.v7.widget.LinearLayoutCompat>

            </android.support.v7.widget.LinearLayoutCompat>

        </android.support.v7.widget.LinearLayoutCompat>
    </ScrollView>
</android.support.v7.widget.LinearLayoutCompat>
